# mfg-test-controller

./: .gitignore  ARCHITECTURE.md  Dockerfile  Makefile  README.md  docker-compose.yml  pyproject.toml
.github/workflows/: ci.yml
bench/: cycle_bench.py
bench/results/: 20260518T235038Z.json
docs/: fault-injection.md  modbus-frame.md  modbus-tcp.md  sample-report.json  sample-report.md  test-plans.md  trend-analysis.md  web-ui.md
plans/: README.md  station_bringup.yaml
profiles/: actuator.yaml  dmm.yaml  power_supply.yaml  thermocouple.yaml
src/mfg_test_controller/: __init__.py  cli.py  config.py  report.py  runner.py  server.py  store.py  trends.py
src/mfg_test_controller/controller/: __init__.py  client.py  sequencer.py  thresholds.py
src/mfg_test_controller/device/: __init__.py  faults.py  profiles.py  simulated.py
src/mfg_test_controller/modbus/: __init__.py  codec.py  exceptions.py  frame.py  framing.py  mbap.py
src/mfg_test_controller/web/: __init__.py  app.py
src/mfg_test_controller/web/static/: app.js  style.css
src/mfg_test_controller/web/templates/: base.html  index.html  run.html  runs.html  (+1 more)
tests/integration/: test_loopback.py  test_web_integration.py
tests/unit/: test_codec.py  test_config.py  test_cycle_bench.py  test_exceptions.py  test_faults.py  test_frame.py  test_framing_modes.py  test_fuzz_frame.py  test_mbap.py  test_profiles.py  test_property_codec.py  test_property_crc.py  test_property_registers.py  test_property_thresholds.py  test_report.py  test_sequencer_stack.py  test_thresholds.py  test_trends.py  test_web.py
